# utilbox

./: .gitignore  HANDOFF.md  LICENSE  README.md  build.py  gui.py  icon_generator.py  install.sh  lan_scanner.py  pyproject.toml  scanner_core.py  utilbox.py
.github/workflows/: release.yml
scripts/: build.py
src/: __init__.py  converter.py  icon_generator.py  image_processor.py  lan_scanner.py  main_gui.py  port_inspector.py  qr_generator.py  ui_style.py  utility_pages.py  version.py
tests/: test_converter.py  test_install.sh  test_main_gui.py  test_scanner.py  test_tool_cores.py  test_ui_style.py  test_version.py
