[project]
name = "utilbox"
version = "1.0.0"
description = "A modern multi-functional utility toolbox with icon generator and network scanner"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "UtilBox Contributors"}
]
keywords = ["utility", "toolbox", "icon-generator", "network-scanner", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "customtkinter>=5.2.0",
    "pillow>=10.0.0",
    "pyinstaller>=6.18.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/utilbox"
Repository = "https://github.com/yourusername/utilbox"
Issues = "https://github.com/yourusername/utilbox/issues"
